<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Ihw-3k-j5M">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Signup View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="SignupViewController" id="BYZ-38-t0r" customClass="SignupViewController" customModule="PhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signup " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gMy-sA-4Gt">
                                <rect key="frame" x="24" y="127.00000000000001" width="345" height="21.666666666666671"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupTitleLable"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="E4w-YK-CM5">
                                <rect key="frame" x="24" y="180.66666666666663" width="345" height="266"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="n2s-ia-Pr0">
                                        <rect key="frame" x="0.0" y="0.0" width="345" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="firstNameTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="continue" textContentType="given-name"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1AI-ef-Pow">
                                        <rect key="frame" x="0.0" y="58" width="345" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="lastNameTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="continue" textContentType="family-name"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jnl-7R-YS2">
                                        <rect key="frame" x="0.0" y="116.00000000000003" width="345" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="continue" textContentType="email"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SmD-Dc-7N4">
                                        <rect key="frame" x="0.0" y="174.00000000000003" width="345" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirmation Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fjm-dn-dJL">
                                        <rect key="frame" x="0.0" y="232.00000000000003" width="345" height="33.999999999999972"/>
                                        <accessibility key="accessibilityConfiguration" identifier="confirmationPasswordTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="continue" secureTextEntry="YES" textContentType="password"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VtN-XH-hMV">
                                <rect key="frame" x="24" y="751.66666666666663" width="345" height="34.333333333333371"/>
                                <accessibility key="accessibilityConfiguration" identifier="signupButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Signup"/>
                                <connections>
                                    <action selector="signupButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zH6-7o-oxQ"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="gMy-sA-4Gt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="24" id="1K8-UJ-LPj"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E4w-YK-CM5" secondAttribute="trailing" constant="24" id="2wn-1J-yB3"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VtN-XH-hMV" secondAttribute="bottom" constant="32" id="8Vx-nw-6sr"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VtN-XH-hMV" secondAttribute="trailing" constant="24" id="8rd-xn-fsc"/>
                            <constraint firstItem="VtN-XH-hMV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="Dc9-HT-mmT"/>
                            <constraint firstItem="E4w-YK-CM5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="LZm-77-1XL"/>
                            <constraint firstItem="E4w-YK-CM5" firstAttribute="top" secondItem="gMy-sA-4Gt" secondAttribute="bottom" constant="32" id="fnW-4n-fJr"/>
                            <constraint firstItem="gMy-sA-4Gt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="24" id="pHI-xr-aP1"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gMy-sA-4Gt" secondAttribute="trailing" constant="24" id="uNp-Zm-KSv"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="NUs-45-4z5"/>
                    <connections>
                        <outlet property="signupButton" destination="VtN-XH-hMV" id="XHG-di-LPE"/>
                        <outlet property="userEmailTextField" destination="jnl-7R-YS2" id="UiZ-IL-Sm7"/>
                        <outlet property="userFirstNameTextField" destination="n2s-ia-Pr0" id="ZY9-Ho-VmK"/>
                        <outlet property="userLastNameTextField" destination="1AI-ef-Pow" id="gkC-lw-IIl"/>
                        <outlet property="userPasswordConfirmationTextField" destination="fjm-dn-dJL" id="Mgx-2D-kYX"/>
                        <outlet property="userPasswordTextField" destination="SmD-Dc-7N4" id="SFA-TZ-9F2"/>
                        <segue destination="VnW-yS-emB" kind="show" identifier="moveToDetail" id="3JU-1g-2c6"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1064.885496183206" y="-2.1126760563380285"/>
        </scene>
        <!--Detail View Controller-->
        <scene sceneID="QmB-TM-jSt">
            <objects>
                <viewController storyboardIdentifier="DetailViewController" id="VnW-yS-emB" customClass="DetailViewController" customModule="PhotoApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="ooj-Fd-eb6">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0AF-R8-Avl">
                                <rect key="frame" x="161" y="415.66666666666669" width="71" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6ea-dM-pal"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="0AF-R8-Avl" firstAttribute="centerX" secondItem="ooj-Fd-eb6" secondAttribute="centerX" id="N90-EN-aBs"/>
                            <constraint firstItem="0AF-R8-Avl" firstAttribute="centerY" secondItem="ooj-Fd-eb6" secondAttribute="centerY" id="W0f-bv-df4"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="Oe0-DJ-n8V"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="HK0-kY-AvK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1889.3129770992366" y="-2.1126760563380285"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="KGL-C3-2IG">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ihw-3k-j5M" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="h3D-7m-GsG">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="F8W-ue-2po"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9VH-F6-ag3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="138.1679389312977" y="-2.1126760563380285"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
