...
      let alert = UIAlertController(
        title: "Success",
        message: "This signup operation was successful",
        preferredStyle: .alert
      )
      alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
      alert.view.accessibilityIdentifier = "successAlertDialog"
      self.present(alert, animated: true, completion: nil)
  }
  
  func errorHandler(error: SignupError) {
    let alert = UIAlertController(
      title: "Error",
      message: "Yuor request could not be proccessed at this time cause \(error.localizedDescription)",
      preferredStyle: .alert
    )
    alert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
    alert.view.accessibilityIdentifier = "errorAlertDialog"
    self.present(alert, animated: true, completion: nil)
  }
  
  private func setupDismissKeyboardGesture() {
    let dismissKeyboardTap = UITapGestureRecognizer(target: self, action: #selector(viewTapped(_ : )))
    view.addGestureRecognizer(dismissKeyboardTap)
...
